--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "lucide-react": "^0.561.0",
-    "@google/genai": "^1.33.0",
+    "lucide-react": "0.292.0",
+    "@google/genai": "0.1.1",
     "peerjs": "1.5.2"
   },
   "devDependencies": {
